traces/bug_751.txt
src/Graphics/ffglut.cpp:1415: error: DEAD_STORE
  The value written to &ww (type double) is never used.
Showing all 1 steps of the trace


src/Graphics/ffglut.cpp:1415:4: Write of unused value
1413.   }
1414.   void  OneWindow::resize(int w,int h)
1415.   {  double ww=width,hh=height;
           ^
1416.       width=w;
1417.       height=h;
